test/features/errors/macros/e1401_undefined_macro.spl
# E1401: Undefined Macro

Feature: E1401 - Macro is Not Defined
  As a Simple compiler
  I want to detect uses of undefined macros
  So that macros are defined before use

  Background:
    Given I have the Simple compiler

  Scenario: Using undefined macro
    When I compile:
      '''
      fn test():
        undefined_macro!(arg1, arg2)  # Error: macro not defined
      '''
    Then I should see error E1401 at line 2
    And the error message should be "macro `{name}` is not defined"
    And the label should indicate "undefined macro"
    And the help should suggest "ensure the macro is defined before use"

  Scenario: Valid macro usage
    When I compile:
      '''
      macro! my_macro(x):
        print(x)

      fn test():
        my_macro!(42)  # OK: macro is defined
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        undefined_macro!(x)
      '''
    Then I should see error E1401
    And the error message should contain "정의되지 않은 매크로"
